# rp2040-vscode-windows-project-template

./: .gitignore  README.md  main.c  utility.c
template/: CMakeLists.txt  build.bat  environment.bat  utility.h
